test/conformance/kuttl/validate/clusterpolicy/standard/cel/parameter-resources/clusterscoped/02-namespaceConstraint.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- namespaceConstraint.yaml
assert:
- namespaceConstraint.yaml
