test/conformance/kuttl/validate/clusterpolicy/standard/cel/parameter-resources/clusterscoped/04-ns.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- file: ns-pass.yaml
  shouldFail: false
- file: ns-fail.yaml
  shouldFail: true
