test/conformance/kuttl/validate/clusterpolicy/standard/cel/parameter-resources/clusterscoped/crd.yaml
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: namespaceconstraints.rules.example.com
spec:
  group: rules.example.com
  names:
    kind: NamespaceConstraint
    plural: namespaceconstraints
  scope: Cluster
  versions:
    - name: v1
      served: true
      storage: true
      schema:
        openAPIV3Schema:
          type: object
          properties:
            apiVersion:
              type: string
            kind:
              type: string
            metadata:
              type: object
            name:
              type: string
