test/conformance/kuttl/validate/clusterpolicy/standard/cel/parameter-resources/clusterscoped/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-namespace-name
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: namespace-name
      match:
        any:
        - resources:
            kinds:
              - Namespace
      validate:
        cel:
          paramKind: 
            apiVersion: rules.example.com/v1
            kind: NamespaceConstraint
          paramRef:
            name: "namespace-constraint-test.example.com"
            parameterNotFoundAction: "Deny"
          expressions:
            - expression: "object.metadata.name == params.name"
              messageExpression:  "'Namespace name must be ' + params.name"
