test/conformance/kuttl/validate/clusterpolicy/standard/cel/parameter-resources/clusterscoped/crd-assert.yaml
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
<<<<<<< HEAD
  name: namespaceconstraints.rules.example.com
=======
  name: namespaceconstraints.rules.example.com
status:
  acceptedNames:
    kind: NamespaceConstraint
    plural: namespaceconstraints
  storedVersions:
  - v1
>>>>>>> b2f8677909cffdb7ea70ec03b01498d72ee1a825
