test/conformance/kuttl/validate/clusterpolicy/standard/cel/parameter-resources/clusterscoped/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-namespace-name
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
